fixed size of navbar to prevent resizing vertical window overlapping

--- a/practice/dashboard/style.css
+++ b/practice/dashboard/style.css
@@ -9,7 +9,7 @@
     font-family: 'Roboto', "Courier New", "Times New Roman", "sans-serif";
     display: grid;
     grid-template-columns: 2fr 10fr;
-    grid-template-rows: calc(0.17 * 100vh ) calc(0.85 * 100vh);
+    grid-template-rows: 200px 800px;
 }
 
 .sidebar {
@@ -84,7 +84,9 @@ a:hover, a:active { text-decoration: none; }
     box-shadow: 0 4px 10px 0px #52525b;
     
     display: grid;
-    grid-template-rows: 40% 40%;
+    grid-template-rows: 80px 80px;
+    min-height: 150px;
+    border-style: double;
 }
 
 .nav-top {
